[package]
name = "ibc-call"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
thiserror.workspace = true
