[package]
name = "ibc-transfer"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = [
    "bank_send.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.5.4", features = ["ibc3"] }
cosmwasm-storage.workspace = true
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
