[package]
name = "ibc-transfer"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = [
    "bank_send.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std.workspace = true
cw2.workspace = true
schemars.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
