[package]
name = "asset-extension-legacy"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = [
  "asset-extension-legacy.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std.workspace = true
cw2.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
coreum-wasm-sdk.workspace = true
cw-storage-plus.workspace = true
