[package]
name = "nft-legacy"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"
description = "Contract that uses the deprecated functionality of the coreum wasm handler for the assetNFT and NFT module"

exclude = [
    "nft-legacy.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
schemars.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
coreum-wasm-sdk.workspace = true
cw-ownable.workspace = true
