[package]
name = "asset-extension-legacy"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = [
  "asset-extension-legacy.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.5.4"
cosmwasm-storage.workspace = true
cw2 = "1.0.1"
thiserror.workspace = true
#cosmwasm-schema = {git = "https://github.com/CosmWasm/cosmwasm" ,package="cosmwasm-schema", rev= "3f8bd842742bc94aa60f587f79dd66b782928b15"}
cosmwasm-schema.workspace = true
coreum-wasm-sdk = "1.0.0" # we use old version intentionally
cw-storage-plus = "1.0.1"
