[package]
name = "authz-stargate"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = ["authz-stargate.wasm", "checksums.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
thiserror = "1.0.56"
cosmwasm-std = { version = "2.1.4", features = ["stargate", "cosmwasm_2_0"] }
cw2 = "2.0.0"
cosmwasm-schema = "2.1.4"
coreum-wasm-sdk = { git = "https://github.com/CoreumFoundation/coreum-wasm-sdk.git", rev = "a0a00147d65b409bef2d86ebebf35959c96263c3" }
