[package]
name = "authz-transfer"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = ["authz-transfer.wasm", "checksums.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
thiserror = "1.0.56"
cosmwasm-std = "1.5.4"
cw2 = "1.1.2"
cw-storage-plus = "1.2.0"
cosmwasm-schema = "1.5.0"
coreum-wasm-sdk = "1.0.0"
