[package]
name = "authz"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = [
  "authz.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
protobuf = "3.2.0"
thiserror = "1.0.40"
cosmwasm-std = { version = "1.2.6", features = ["stargate"] }
cw2 = "1.0.1"
cw-storage-plus = "1.1.0"
cosmwasm-schema = "1.2.6"
