[package]
name = "authz"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = [
  "authz.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
protobuf = "3.2.0"
thiserror = "1.0.50"
cosmwasm-std = { version = "1.5.0", features = ["stargate"] }
cw2 = "1.1.1"
cw-storage-plus = "1.1.0"
cosmwasm-schema = "1.5.0"
# TODO(keyleu): Change to coreum-wasm-sdk = "0.2.1" when it's published
coreum-wasm-sdk = { git = "https://github.com/CoreumFoundation/coreum-wasm-sdk", branch = "keyne/upgrade-coreum-wasm-sdk" }
cw-utils = "1.0.2"
