[package]
name = "ft-legacy"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"
description = "Contract that uses the deprecated functionality of the coreum wasm handler for the assetFT module"

exclude = [
    "ft-legacy.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.5.4"
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
thiserror = "1.0.50"
# TODO(keyleu): Update dependency once final version of coreum-wasm-sdk crate is pushed
coreum-wasm-sdk = { git = "https://github.com/CoreumFoundation/coreum-wasm-sdk.git", branch = "keyne/upgrade-wasm-sdk" }
cosmwasm-schema = "1.4.1"
cw-ownable = "0.5.1"
