[package]
name = "ft"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = [
    "ft.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
thiserror.workspace = true
coreum-wasm-sdk.workspace = true
cosmwasm-schema.workspace = true
cw-ownable.workspace = true
