[package]
name = "nft-legacy"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"
description = "Contract that uses the deprecated functionality of the coreum wasm handler for the assetNFT and NFT module"

exclude = [
    "nft-legacy.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.5.4"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
thiserror = "1.0.59"
schemars = "0.8.16"
coreum-wasm-sdk = "0.2.4"
cosmwasm-schema = "1.5.4"
cw-ownable = "0.5.1"
