[package]
name = "nft-legacy"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"
description = "Contract that uses the deprecated functionality of the coreum wasm handler for the assetNFT and NFT module"

exclude = [
    "nft-legacy.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-storage.workspace = true
thiserror.workspace = true
schemars.workspace = true
cosmwasm-schema.workspace = true
cosmwasm-std = "1.5.4" # we use the old version intentionally
cw-storage-plus = "1.2.0" # we use the old version intentionally
cw2 = "1.1.2" # we use the old version intentionally
coreum-wasm-sdk = "1.0.0" # we use the old version intentionally
cw-ownable = "0.5.1" # we use the old version intentionally
