[package]
name = "ibc-call"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.2.2", features = ["ibc3"] }
cosmwasm-schema = "1.2.2"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
thiserror = { version = "1.0.31" }

[dev-dependencies]
cw-multi-test = "0.16.2"
