[package]
name = "bank-send"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = [
  "bank_send.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.2.5"
cosmwasm-storage = "1.2.5"
cw2 = "1.0.1"
thiserror = { version = "1.0.40" }
cosmwasm-schema = "1.2.6"
cw-ownable = "0.5.1"
