[package]
name = "asset-extension"
version = "0.1.0"
authors = ["Coreum"]
edition = "2021"

exclude = [
  "simple_state.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
cosmwasm-std = { version = "2.1.4", features = ["cosmwasm_2_0"] }
cw2 = "2.0.0"
thiserror = "1.0.59"
cosmwasm-schema = "2.1.4"
coreum-wasm-sdk = { git = "https://github.com/CoreumFoundation/coreum-wasm-sdk.git" }
cw-storage-plus = "2.0.0"
prost = "0.11.9"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-cw-value = "0.7.0"
