[package]
name = "coreum-wasm-sdk"
version = "0.1.3"
edition = "2021"
description = "SDK for WASM coreum messages and queries."
homepage = "https://coreum.com/"
license = "Apache-2.0"

[dependencies]
cosmwasm-std = "1.2.6"
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
schemars = "0.8.12"
cosmwasm-schema = "1.2.6"
